--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
         </section>
       </main>
     </div>
+    <footer>
+      Feito com <img src="/assets/Vector.svg" alt="Coração" /> pela Rocketseat
+    </footer>
   </body>
 </html>
